--- a/Assets/Style/style.css
+++ b/Assets/Style/style.css
@@ -26,7 +26,7 @@
 .navbar .navbar-nav .nav-link {
     color: #fff !important;
     font-size: 18px;
-    padding: 13px 11px 10 40px;
+    padding: 13px 11px 10px 40px;
 }
 
 .navbar .navbar-nav .nav-link :hover {
