--- a/Assets/Style/style.css
+++ b/Assets/Style/style.css
@@ -95,7 +95,7 @@ body {
     /* height: 600px; */
     display: inline-block;
     max-width: auto;
-    height: 650px!important;
+    height: 650px !important;
     /* margin-bottom: 30px; */
     /*    object-fit: cover;
     object-position: center*/
@@ -168,13 +168,13 @@ body {
     height: 251px; */
 }
 
-
-/* a.img_container {
+a.img_container {
     width: 255px;
     height: 251px;
 }
 
-.Featured-card {
+
+/*.Featured-card {
     margin-left: 150px;
     margin-left: 150px;
 } */
@@ -191,6 +191,12 @@ body {
     color: #241e1c;
     margin-top: 50px;
     margin-bottom: 50px;
+}
+
+@media (min-width: 1250px) {
+    .col-xs-12 {
+        width: 100px;
+    }
 }
 
 
@@ -212,8 +218,12 @@ body {
 }
 
 .about-img-container {
-    padding-left: 120px;
+    /* padding-left: 120px; */
     margin: 50px 0 50px;
+}
+
+.about-img-col {
+    width: 400px;
 }
 
 .about-txt-container {
@@ -235,20 +245,121 @@ body {
 /*About end*/
 
 
+/* footer start */
+
+.footer-dark {
+    padding: 50px 0;
+    color: #f0f9ff;
+    background-color: #282d32;
+}
+
+.footer-dark h3 {
+    margin-top: 0;
+    margin-bottom: 12px;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.footer-dark ul {
+    padding: 0;
+    list-style: none;
+    line-height: 1.6;
+    font-size: 14px;
+    margin-bottom: 0;
+}
+
+.footer-dark ul a {
+    color: inherit;
+    text-decoration: none;
+    opacity: 0.6;
+}
+
+.footer-dark ul a:hover {
+    opacity: 0.8;
+}
+
+@media (max-width:767px) {
+    .footer-dark .item:not(.social) {
+        text-align: center;
+        padding-bottom: 20px;
+    }
+}
+
+.footer-dark .item.text {
+    margin-bottom: 36px;
+}
+
+@media (max-width:767px) {
+    .footer-dark .item.text {
+        margin-bottom: 0;
+    }
+}
+
+.footer-dark .item.text p {
+    opacity: 0.6;
+    margin-bottom: 0;
+}
+
+.footer-dark .item.social {
+    text-align: center;
+}
+
+@media (max-width:991px) {
+    .footer-dark .item.social {
+        text-align: center;
+        margin-top: 20px;
+    }
+}
+
+.footer-dark .item.social>a {
+    font-size: 20px;
+    width: 36px;
+    height: 36px;
+    line-height: 36px;
+    display: inline-block;
+    text-align: center;
+    border-radius: 50%;
+    box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.4);
+    margin: 0 8px;
+    color: #fff;
+    opacity: 0.75;
+}
+
+.footer-dark .item.social>a:hover {
+    opacity: 0.9;
+}
+
+.footer-dark .copyright {
+    text-align: center;
+    padding-top: 24px;
+    opacity: 0.3;
+    font-size: 13px;
+    margin-bottom: 0;
+}
+
+
+/* footer end */
+
+
 /***********
  debug start
  ***********/
 
-
-/* .container {
+.container {
     border: 2px solid green;
 }
 
 .row {
     border: 2px solid rgb(0, 0, 0);
-} */
+}
 
 
 /***********
  debug end 
  ***********/
+
+.fa-brands {
+    font-size: 56px;
+    color: aqua;
+    background-color: #fff;
+}
