--- a/Assets/Style/style.css
+++ b/Assets/Style/style.css
@@ -2,6 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Source+Sans+Pro&display=swap');
+@import "normalize.css";
 body {
     font-family: 'Playfair Display', serif;
 }
@@ -94,7 +95,9 @@ body {
 .owl-carousel .item img {
     /* height: 600px; */
     display: inline-block;
+    /*
     max-width: auto;
+    */
     height: 650px !important;
     /* margin-bottom: 30px; */
     /*    object-fit: cover;
@@ -156,6 +159,15 @@ body {
 
 /*featured start*/
 
+.Featured-card{
+   display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+
+    /*
+    flex-direction: column;
+    */
+}
 .Featured-card-title h4 {
     font-size: 22px;
     font-family: 'Playfair Display', serif;
@@ -184,6 +196,13 @@ a.img_container {
     width: 255px;
     height: 251px;
 } */
+
+/*
+.container-featured{
+    display: flex;
+    justify-content: ;
+}
+*/
 
 #Featured h3 {
     text-align: center;
@@ -219,11 +238,18 @@ a.img_container {
 
 .about-img-container {
     /* padding-left: 120px; */
+    width: 400px;
     margin: 50px 0 50px;
 }
 
 .about-img-col {
-    width: 400px;
+    display: flex;
+    justify-content: center;
+
+    /*
+    width: 100px;
+    */
+
 }
 
 .about-txt-container {
@@ -338,28 +364,89 @@ a.img_container {
 }
 
 
+
 /* footer end */
+
+
+
+/*
+Menu page start
+*/
+#Menu{
+    margin-bottom: 100px;
+    margin-top: 100px;
+}
+.menu-img-container{
+    width: 445px;
+}
+.menu-img-container img {
+
+max-width: 100%;
+    border-radius: 10px;
+
+}
+.menu .menu-item {
+    position: relative;
+    margin-bottom: 30px;
+    display: flex;
+    align-items: center;
+}
+.menu .menu-img {
+    width: 80px;
+    margin-right: 20px;
+}
+.menu .menu-img img {
+    width: 100%;
+    border-radius: 100px;
+}
+.menu .menu-text {
+    width: calc(100% - 100px);
+}
+.menu .menu-text h3 {
+    position: relative;
+    display: block;
+    font-size: 22px;
+    font-weight: 700;
+}
+strong {
+    font-weight: bolder;
+}
+.menu .menu-text h3::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 0;
+    top: 13px;
+    left: 0;
+    border-top: 2px dotted #cccccc;
+    z-index: -1;
+}
+.menu .menu-text p {
+    position: relative;
+    margin: 5px 0 0 0;
+    float: left;
+    display: block;
+}
+/*
+Menu page start
+*/
+
 
 
 /***********
  debug start
  ***********/
-
+/*
 .container {
     border: 2px solid green;
 }
 
 .row {
     border: 2px solid rgb(0, 0, 0);
-}
+}*/
 
 
 /***********
  debug end 
  ***********/
 
-.fa-brands {
-    font-size: 56px;
-    color: aqua;
-    background-color: #fff;
-}
