--- a/Assets/Style/style.css
+++ b/Assets/Style/style.css
@@ -95,6 +95,11 @@ body {
 /* Navbar End */
 
 
+/*last produvts slider start */
+
+/*last produvts slider end*/
+
+
 /* <*******************************> */
 
 .owl-carousel .item img {
@@ -415,90 +420,155 @@ a.img_container {
 
 
 /*mini galery start*/
-.menu-galery{
-    padding-top: 70px;
-}
-
-.Galery-container {
-    /*padding: 100px 0;*/
-    background: #F4F4F4;
-    padding-bottom: 50px;
+/*galery editing*/
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    transition: all .2s linear;
 
 }
 
-.Galery-container h3 {
+.galery {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 90%;
+    margin: 0 auto;
+}
+
+.galery a {
+    height: 200px;
+    width: 300px;
+    margin: 20px;
+    border-radius: 5px;
+    overflow: hidden;
+    box-shadow: 0 3px 5px #000000;
+}
+
+/*for home page galery*/
+.galery .hg {
+    height: 300px;
+    width: 400px;
+
+}
+
+.galery a img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.galery a img:hover {
+    transform: scale(1.4);
+}
+
+.gallery-title-hm {
+    font-size: 50px;
     text-align: center;
-    font-size: 42px;
-    color: #241e1c;
-    padding-top: 50px;
+    text-transform: uppercase;
     margin-bottom: 50px;
+    margin-top: 50px;
 }
 
-/*.Galery-container p {*/
+.see-all {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.see-all a {
+    color: black;
+    text-decoration: none;
+    font-size: 25px;
+}
+
+#Galery {
+    padding-bottom: 50px;
+}
+
+/*galery editing end*/
+
+
+/*.menu-galery {*/
+/*    padding-top: 70px;*/
+/*}*/
+
+/*.Galery-container {*/
+/*    !*padding: 100px 0;*!*/
+/*    background: #F4F4F4;*/
+/*    padding-bottom: 50px;*/
+
+/*}*/
+
+/*.Galery-container h3 {*/
+/*    text-align: center;*/
+/*    font-size: 42px;*/
+/*    color: #241e1c;*/
+/*    padding-top: 50px;*/
+/*    margin-bottom: 50px;*/
+/*}*/
+
+/*!*.Galery-container p {*!*/
+/*!*    margin-top: 25px;*!*/
+/*!*    text-align: center;*!*/
+/*!*    font-size: 20px;*!*/
+/*!*    color: #241e1c!important;*!*/
+/*!*    text-decoration: none;*!*/
+
+
+/*!*}*!*/
+/*.Galery-container a {*/
 /*    margin-top: 25px;*/
 /*    text-align: center;*/
 /*    font-size: 20px;*/
-/*    color: #241e1c!important;*/
+/*    color: #241e1c !important;*/
 /*    text-decoration: none;*/
 
 
 /*}*/
-.Galery-container a {
-    margin-top: 25px;
-    text-align: center;
-    font-size: 20px;
-    color: #241e1c!important;
-    text-decoration: none;
+
+/*.galery-container {*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    flex-direction: row;*/
+/*    flex-wrap: wrap;*/
+/*}*/
 
 
-}
-
-.galery-container {
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
-
-
+/*.card {*/
+/*    height: 250px;*/
+/*    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.6);*/
+/*    background-size: cover !important;*/
+/*    color: white;*/
+/*    position: relative;*/
+/*    border-radius: 5px;*/
+/*    margin-bottom: 20px;*/
+/*}*/
 
 
-.card {
-    height: 250px;
-    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.6);
-    background-size: cover !important;
-    color: white;
-    position: relative;
-    border-radius: 5px;
-    margin-bottom: 20px;
-}
+/*.card-link {*/
+/*    position: absolute;*/
+/*    top: 0;*/
+/*    bottom: 0;*/
+/*    width: 100%;*/
+/*    z-index: 2;*/
+/*    background: black;*/
+/*    opacity: 0;*/
+/*}*/
 
+/*.card-link:hover {*/
+/*    opacity: 0.1;*/
 
-.card-link {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 100%;
-    z-index: 2;
-    background: black;
-    opacity: 0;
-}
+/*}*/
 
-.card-link:hover {
-    opacity: 0.1;
+/*.card:hover {*/
 
-}
+/*    transform: scale(1.1);*/
+/*    transition-duration: 0.5s;*/
 
-.card:hover{
-
-    transform: scale(1.1);
-    transition-duration: 0.5s;
-
-}
+/*}*/
 
 /*mini galery end*/
-
 
 
 /*
@@ -508,6 +578,7 @@ Menu page start
     margin-bottom: 100px;
     margin-top: 100px;
 }
+
 @media (max-width: 992px) {
     #Menu {
         margin-bottom: 20px;
@@ -592,12 +663,46 @@ strong {
     padding-top: 100px;
 
 
-
 }
+
 .menu-logo-container img {
     width: 100%;
     height: auto;
     max-width: 700px;
+
+}
+
+.nav-pills {
+    margin-bottom: 50px;
+}
+
+.nav-pills li .active {
+
+    background-color: rgb(255, 255, 255) !important;
+    border: 1px solid black;
+    color: black !important;
+
+
+}
+
+.nav-pills li a {
+
+    color: rgba(47, 51, 48, 0.74) !important;
+}
+
+
+/* 1 */
+.custom-btn {
+    transition: all 0.3s ease;
+}
+
+.custom-btn:hover {
+    box-shadow: -7px -7px 20px 0px #fff9,
+    -4px -4px 5px 0px #fff9,
+    7px 7px 20px 0px #0002,
+    4px 4px 5px 0px #0001;
+    border: 1px solid black;
+    color: black !important;
 
 }
 
