--- a/Assets/Style/style.css
+++ b/Assets/Style/style.css
@@ -420,22 +420,25 @@ body {
 
 
 /*head cards start*/
-.headcards{
-    display:flex ;
+.headcards {
+    display: flex;
     justify-content: center;
     flex-wrap: wrap;
 }
-.head-card-title{
-    margin-top:50px ;
-    margin-bottom:50px ;
+
+.head-card-title {
+    margin-top: 50px;
+    margin-bottom: 50px;
     text-align: center;
     text-transform: uppercase;
     font-size: 50px;
 }
-.card-description h2{
+
+.card-description h2 {
     text-align: center;
 }
-.card-description p{
+
+.card-description p {
     text-align: center;
 }
 
@@ -449,7 +452,7 @@ body {
     /* blur the lowres image */
 }
 
-.card-image>img {
+.card-image > img {
     display: block;
     width: 100%;
     opacity: 0;
@@ -503,13 +506,14 @@ body {
     color: #515151;
 }
 
-.card-description>h2 {
+.card-description > h2 {
     margin: 0 0 0.5em;
 }
 
-.card-description>p {
+.card-description > p {
     margin: 0;
 }
+
 /*head cards end*/
 
 
@@ -530,7 +534,8 @@ body {
     width: 90%;
     margin: 0 auto;
 }
-.gallery-title{
+
+.gallery-title {
     text-align: center;
     text-transform: uppercase;
     padding-top: 70px;
@@ -869,3 +874,52 @@ Menu page end
 /*.col-lg-7{*/
 /*    padding: 0!important;*/
 /*}*/
+
+
+/*reservation start*/
+.form-box input {
+    width: 100%;
+    border: 2px dotted #ccc;
+    background: #f5f5f5;
+    color: #202020;
+    padding: 12px;
+    text-transform: capitalize;
+    border-radius: 4px;
+    opacity: 1;
+    min-height: 54px;
+}
+
+.form-reservations-box {
+    width: 70%;
+    margin: 0 auto;
+}
+
+.reservations-box {
+    padding-top: 30px;
+    display: flex;
+    justify-content: center;
+}
+
+.form-box {
+    margin-bottom: 20px;
+    min-height: 53px;
+}
+
+input {
+    line-height: normal;
+}
+
+/*reservation end*/
+
+
+.booking {
+    position: relative;
+    width: 100%;
+    margin-bottom: 45px;
+    background: rgba(0, 0, 0, .04);
+}
+
+.ttt {
+    margin-bottom: 200px;
+    margin-top: 200px;
+}
